--- a/软件设计文档.md
+++ b/软件设计文档.md
@@ -23,6 +23,12 @@
 <br/>
 
 ## 3、模块划分
+本项目主要划分为两个模块：<br/>
+**1、用户注册、登录模块** <br/>
+负责用户的注册和登录，同时管理与存储用户的信息。
+
+**2、信息管理模块** <br/>
+负责对数据信息的管理，实现增、删、改、查功能
 
 
 <br/>
@@ -287,7 +293,7 @@
 ## 5、数据库设计
 ### （1）数据库ER图
 数据库ER图如下： <br/>
-![avatar](https://github.com/momo-study/StarDiary/blob/final/pics/design_er.png)
+![avatar](https://github.com/momo-study/StarDiary/blob/master/pics/design_er.png)
 
 <br/>
 
