--- a/需求规格说明书.md
+++ b/需求规格说明书.md
@@ -1,1 +1,13 @@
- 
+ # StarDiary需求规格说明书
+ ## 1、项目概要
+ **项目目标：**<br/>
+ 实现一个信息管理网站，主要面向天文爱好者以及对宇宙天文抱有兴趣的用户。用户可以通过本网站进行星系星球信息分类、 梳理星系星球层次关系、查询相应信息、保存相应数据等。利用本网站，用户提 供的资料可以完整详实地反映在网页上，数据可以得到准确无误的更新；用户可以更直观更立体地了解宇宙，管理自己的信息可以使其成为一个稳定可靠的信息源，减少信息交流的繁琐过程及其带来的开销，有助于提高用户参与的积极度。 本网站可支持使用各类主流浏览器（微软 IE、Edge、苹果 Safari、Chrome、Firefox、 360 等）。 
+**项目灵感：**<br/>
+人们都有探索宇宙的冲动，但是天体数量十分庞大，如何全面直观地揭示天体的层次结构及从属关系，却是目前市场所缺失的部分。现有天文网站关于星系星球的介绍过于单一，无法直观全面地揭示星 系星球之间的层次之分与包含关系，也使用户失去参与的热情。因此，我们想要 打造一款属于用户自己的管理网站，让用户管理属于自己的星系模型，根据自己的喜好与认识，去创建属于自己的宇宙。目前同类产品所占据的市场份额较少， 且功能较为单一，用户的这些需求在当前市场环境中无法得到更好地满足。
+
+## 2、功能需求
+1. 平台提供用户注册与登录功能
+2. 用户可以查看、管理、修改自己的用户信息
+3. 用户登录后进入到主界面，可以管理自己的行星等数据，进行增、删、改、查等操作
+
+## 3、用例建模
