--- a/安装部署说明.md
+++ b/安装部署说明.md
@@ -1,1 +1,42 @@
+# StarDiary本地安装部署说明
 
+## 安装软件
+1、安装Nodejs <br/>
+2、安装npm <br/>
+3、安装Redis（后台运行即可） <br/>
+4、安装MySQL <br/>
+<br/>
+
+## 配置MySQL
+
+<br/>
+
+## 前端
+安装依赖 <br/>
+```
+npm install
+```
+
+构建静态文件<br/>
+```
+npm run build
+```
+
+启动静态文件服务器 <br/>
+```
+npm start
+```
+
+<br/>
+<br/>
+
+## 后端
+安装依赖 <br/>
+```
+npm install
+```
+
+启动 API 服务器<br/>
+```
+npm start
+```
