--- a/需求规格说明书.md
+++ b/需求规格说明书.md
@@ -16,7 +16,7 @@
 
 ## 3、用例建模
 ### （1）用例图
-![usecase]()
-
+![usecase](https://github.com/momo-study/StarDiary/blob/master/pics/usecase.png)
+<br/>
 ### （2）领域模型
-![domain]()
+![domain](https://github.com/momo-study/StarDiary/blob/master/pics/domain.png)
